@@ -38,8 +38,8 @@ class JInstallerTemplate extends JAdapterInstance
 		$extension = "tpl_$name";
 		$lang =& JFactory::getLanguage();
 		$source = $path;
-		$lang->load($extension, constant('JPATH_'.strtoupper($client));
-		$lang->load($extension . '.manage', constant('JPATH_'.strtoupper($client));		
+		$lang->load($extension, constant('JPATH_'.strtoupper($client)));
+		$lang->load($extension . '.manage', constant('JPATH_'.strtoupper($client)));
 		$lang->load($extension, $source);
 		$lang->load($extension . '.manage', $source);
 	}
