@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-Feb-2010 Hannes Papenberg
+# Fixed sampledata in JFilterInputTests
+
 08-Feb-2010 Hannes Papenberg
 # Fixed JSimpleXML tests
 
