@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-Feb-2010 Hannes Papenberg
+# Fixed bug in JFilterInput
+
 09-Feb-2010 Christophe Demko
 + Adding language files facility to package, files and library
 
